[package]
name = "app_error"
version = "1.0.0"
edition = "2024"
license = "MIT"
description = "A simple error manager"
repository = "https://github.com/zacharysiegel/app_error"
readme = "./readme.md"
keywords = ["error"]
categories = ["rust-patterns"]
authors = ["Zachary Siegel <hello@zach.ro>"]

[dependencies]

